--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "^1.4.4",
     "debug": "~2.6.9",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "morgan": "~1.9.0",
     "pg": "^7.10.0",
     "sequelize": "^5.8.1",
