--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "morgan": "~1.9.0",
-    "nodemon": "^1.19.0",
     "pg": "^7.10.0",
     "sequelize": "^5.8.1",
     "sequelize-cli": "^5.4.0"
+  },
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.4.1"
   }
 }
