--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^3.0.6",
     "cookie-parser": "^1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "morgan": "~1.9.0",
