--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "pryjs": "^1.0.3",
     "sequelize": "^5.8.1",
     "sequelize-cli": "^5.4.0"
+  },
+  "devDependencies": {
+    "shelljs": "^0.8.3"
   }
 }
